# rag-system

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/lint/: action.yml
.github/actions/test/: action.yml
.github/workflows/: ci.yaml
docs/: coffee.txt  index.md
images/: 0_rag.excalidraw  1_chunking.excalidraw  2_retrieve.excalidraw
src/: config.py  template_function.py  utils.py
src/chatbot/: chatbot.py
src/chunk/: chunks.py  save_to_db.py
src/retrieve/: context.py  pipeline.py  reranking.py  search.py  transformation.py
src/ui/: app.py
tests/: test_template.py
