[project]
name = "rag-tutorial"
version = "0.1.0"
description = "Full RAG tutorial."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "complexipy>=5.4.1",
    "dotenv>=0.9.9",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
    "ipykernel>=7.3.0",
    "isort>=8.0.1",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "mypy>=2.1.0",
    "pinecone>=9.1.0",
    "pylint>=4.0.5",
    "pypdf>=6.13.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "sentence-transformers>=5.6.0",
]

[[tool.mypy.overrides]]
module = ["sentence-transformers.*"]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov src"

[tool.coverage.run]
omit = ["src/main.py"]

[tool.isort]
profile = "black"
lines_after_imports = 2
